tests/baselines/reference/multipleDefaultExports05.errors.txt
multipleDefaultExports05.ts(1,22): error TS2528: A module cannot have multiple default exports.
multipleDefaultExports05.ts(3,22): error TS2528: A module cannot have multiple default exports.
multipleDefaultExports05.ts(5,22): error TS2528: A module cannot have multiple default exports.


==== multipleDefaultExports05.ts (3 errors) ====
    export default class AA1 {}
                         ~~~
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS2753 multipleDefaultExports05.ts:3:22: Another export default is here.
    
    export default class BB1 {}
                         ~~~
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS2752 multipleDefaultExports05.ts:1:22: The first export default is here.
    
    export default class CC1 {}
                         ~~~
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS2752 multipleDefaultExports05.ts:1:22: The first export default is here.
    